src/test/resources/30/single/opf/invalid/edupub-teacher-edition-nosource.opf
<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="../../../../../../main/resources/com/adobe/epubcheck/schema/30/package-30.rnc" type="application/relax-ng-compact-syntax"?>
<?xml-model href="../../../../../../main/resources/com/adobe/epubcheck/schema/30/package-30.sch" type="application/xml" schematypens="http://purl.oclc.org/dsdl/schematron"?>
<?xml-model href="../../../../../../main/resources/com/adobe/epubcheck/schema/30/edupub/edu-opf.sch" type="application/xml" schematypens="http://purl.oclc.org/dsdl/schematron"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid" xmlns:dc="http://purl.org/dc/elements/1.1/">
    <metadata>
        <dc:type>edupub</dc:type>
        <dc:type>teacher-edition</dc:type>
        <dc:identifier id="uid">urn:uuid:550e8412-e29b-41d4-a716-446655441234</dc:identifier>
        <dc:title>Textbook</dc:title>
        <dc:language>en</dc:language>
        <meta property="dcterms:modified">2011-08-19T12:00:00Z</meta>
        <meta property="schema:accessibilityFeature">tableOfContents</meta>
    </metadata> 
    <manifest>
        <item id="t001" href="contents.xhtml" properties="nav" media-type="application/xhtml+xml" />        
    </manifest>
    <spine>
        <itemref idref="t001" />
    </spine>
</package>